--- a/models/default.cfg
+++ b/models/default.cfg
@@ -1,27 +1,18 @@
-behav_hete True 
-hard_hete True
+user_trace True 
 no_training False 
-real_world False
 dataset femnist 
 model cnn 
-num_rounds 500 
-learning_rate 0.01 
-eval_every 5
+num_rounds 3000 
+learning_rate 0.01
+max_client_num -1
+eval_every 10
 clients_per_round 100 
-min_selected 60 
+min_selected 80 
 max_sample 340 
 batch_size 10 
 seed 0 
-round_ddl 270 0 
-update_frac 0.8  
-max_client_num -1
+round_ddl 110 0 
+update_frac 0.8 
+upload_time 60 5 
 aggregate_algorithm SucFedAvg 
-num_epochs 5 
-# compress_algo grad_drop
-fedprox True
-fedprox_mu 0.5
-fedprox_active_frac 0.8
-# structure_k 100
-# qffl True
-# qffl_q 5
-
+num_epochs 1 
